--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     --cor-bg:#000000;
     --cor-hover: #fffb00;
 
-    --font-primario: "Jacquard 24", system-ui;
+    --font-primario:"Agbalumo", system-ui;
     --font-secundario: "Kanit", sans-serif;
 }
 
@@ -25,6 +25,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    font-family: var(--font-secundario);
 }
 
 .cabecalho{
