--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
 }
 
 * {
-    margin: 0;
     padding: 0;
 }
 
@@ -104,6 +103,7 @@ body {
     justify-content: space-between;
     margin: 5em;
     gap: 5px;
+    font-weight: 900;
 }
 
 .apresentacao_links_titulo {
@@ -126,9 +126,6 @@ body {
     font-size:20px;
     font-weight: 600;
     text-decoration: none;
-    font-family: "Irish Grover", system-ui;
-  
-    
 }
 
 strong {
