--- a/style.css
+++ b/style.css
@@ -53,21 +53,12 @@ body {
 }
 
 .foto-praia {
-    height: 600px ;
-    border-radius: 3rem;
+    height: 545px ;
+    border-radius: 28em;
     padding: 1em;
-    margin: 1em 0 0 1em;
-    border: 24px solid var(--cor-terciaria);
-    background-color:var(--cor-terciaria);
-}
-
-.foto-senac {
-    height: 300px ;
-    border-radius: 3rem;
-    padding: 90;
-    margin: 1em;
-    border: 5px solid var(--cor-secundaria);
-    background-color:var(--cor-bg)
+    margin: -26em 37em -1em;
+    border: 18px solid var(--cor-terciaria);
+    background-color:var(--cor-secundaria);
 }
 
 .apresentacao_conteudo {
@@ -95,6 +86,7 @@ body {
     text-align: justify;
     font-size:30px;
     font-family: var(--font-primario);
+    margin: 0 0 -2em 0;
 }
 
 .apresentacao_links {
@@ -107,24 +99,26 @@ body {
 }
 
 .apresentacao_links_titulo {
-    font-weight: 400;
-    font-size: 24px;
+    font-weight: 700;
+    font-size: 35px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: var(--font-secundario);
 }
 
 .apresentacao_links_link {
+    font-family: var(--font-primario);
     display: flex;
     justify-content: center; 
     background-color:var(--cor-secundaria);
-    color: rgb(8, 10, 12);
-    width: 100px;
+    color: var(--cor-bg);
+    width: 156px;
     text-align: center;
     border: 4px solid var(--cor-terciaria);
     border-radius: 10px;
-    font-size:20px;
-    font-weight: 600;
+    font-size:24px;
+    font-weight: 900;
     text-decoration: none;
 }
 
@@ -136,13 +130,16 @@ strong {
     text-align:right ;
     color: var(--cor-bg);
     font-size: 25px;
+    font-family: var(--font-secundario);
+    font-weight: 700;
 }
 
 .meu_nome {
     text-align: right;
     color: var(--cor-bg);
     font-size: 25px;
-    font-weight: 800;
+    font-weight: 700;
+    font-family: var(--font-secundario);
 }
 
 .marca_texto {
@@ -150,14 +147,15 @@ strong {
 }
 
 .apresentacao_links_link:hover{
-    border-color: rgb(222, 222, 222)
+    border-color: var(--cor-hover);
 }
 
 .rodape {
-    padding: 24px;
-    color: rgb(8, 10, 12);
+    padding: 30px;
+    color:var(--cor-bg);
     background-color: var(--cor-secundaria);
     text-align: center;
     font-weight: 800;
     font-size: 24px;
+    margin: 0 0 0 -8rem;
 }
